syntax = "proto3";

package cmdctrlsvc;

service CmdCtrl {
    rpc RingUpdate(Ring) returns (RingUpdateResult) {}
    rpc Reload(EmptyMsg) returns (StatusMsg) {}
    rpc Restart(EmptyMsg) returns (StatusMsg) {}
    rpc Start(EmptyMsg) returns (StatusMsg) {}
    rpc Stop(EmptyMsg) returns (StatusMsg) {}
    rpc Exit(EmptyMsg) returns (StatusMsg) {}
    rpc Stats(EmptyMsg) returns (StatsMsg) {}
    rpc HealthCheck(EmptyMsg) returns (HealthCheckMsg) {}
    rpc SelfUpgrade(SelfUpgradeMsg) returns (StatusMsg) {}
    rpc SoftwareVersion(EmptyMsg) returns (SoftwareVersionMsg) {}
}

message RingUpdateResult {
    int64 newversion = 1;
}

message StatsMsg {
    bytes statsjson = 1;
}

message EmptyMsg {}

message StatusMsg {
    bool status = 1;
    string msg = 2;
}

message Ring {
    int64 version = 1;
    bytes ring = 2;
}

message HealthCheckMsg {
    bool status = 1;
    string msg = 2;
    int64  ts = 3;
}

message SelfUpgradeMsg {
    string version = 1;
    bytes  bindiff = 2;
    bytes  checksum = 3;
}

message SoftwareVersionMsg {
    string version = 1;
}
